# flow

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  README.md  TODO.md  appveyor.yml  autogen.sh  flow.vim
docs/: syntax.txt
examples/: afk-example1.afk  afk.cc  afk.md  hello.cc  real-users-in-passwd.afk
src/flow/: AST.cc  AST.h  ASTPrinter.cc  ASTPrinter.h  ASTVisitor.h  Diagnostics.cc  Diagnostics.h  FlowCallVisitor.cc  FlowCallVisitor.h  FlowLexer-test.cc  FlowLexer.cc  FlowLexer.h  FlowParser-test.cc  FlowParser.cc  FlowParser.h  FlowToken.cc  FlowToken.h  IRGenerator.cc  IRGenerator.h  LiteralType.cc  LiteralType.h  MatchClass.cc  MatchClass.h  NativeCallback.cc  NativeCallback.h  Params.h  Signature.cc  Signature.h  SourceLocation.cc  SourceLocation.h  TargetCodeGenerator.cc  TargetCodeGenerator.h  flowtest-main.cc  flowtest.cc  flowtest.h  sysconfig.h.cmake
src/flow/ir/: BasicBlock.cc  BasicBlock.h  Constant.cc  Constant.h  ConstantArray.cc  ConstantArray.h  ConstantValue.cc  ConstantValue.h  HandlerPass.h  IRBuilder.cc  IRBuilder.h  IRBuiltinFunction.h  IRBuiltinHandler.h  IRHandler.cc  IRHandler.h  IRProgram.cc  IRProgram.h  Instr.cc  Instr.h  InstructionVisitor.cc  InstructionVisitor.h  Instructions.cc  Instructions.h  PassManager.cc  PassManager.h  Value.cc  Value.h
src/flow/lang/: AST.cc  AST.h  ASTPrinter.cc  ASTPrinter.h  ASTVisitor.h  CallVisitor.cc  CallVisitor.h  FlowCallVisitor.cc  FlowCallVisitor.h  FlowLexer.cc  FlowLexer.h  FlowParser.cc  FlowParser.h  FlowToken.cc  FlowToken.h  IRGenerator.cc  IRGenerator.h  Interpreter.cc  Interpreter.h  Lexer-test.cc  Lexer.cc  Lexer.h  Parser-test.cc  Parser.cc  Parser.h  Token.cc  Token.h
src/flow/transform/: EmptyBlockElimination.cc  EmptyBlockElimination.h  InstructionElimination.cc  InstructionElimination.h  MergeBlockPass.cc  MergeBlockPass.h  UnusedBlockPass.cc  UnusedBlockPass.h
src/flow/util/: Cidr.cc  Cidr.h  Flags.cc  Flags.h  IPAddress.h  PrefixTree-test.cc  PrefixTree.h  RegExp.cc  RegExp.h  SuffixTree-test.cc  SuffixTree.h  unbox.h
src/flow/vm/: ConstantPool.cc  ConstantPool.h  Handler.cc  Handler.h  Instruction.cc  Instruction.h  Match.cc  Match.h  Program.cc  Program.h  Runner-test.cc  Runner.cc  Runner.h  Runtime.cc  Runtime.h
src/fltest/: flowtest-test.cc  flowtest.cc  flowtest.h  main.cc
